# t-norms

./: LICENSE  README.md  stack.yaml  t-norms.cabal
src/: TNorms.hs
test/: Spec.hs
