name:                t-norms
version:             0.1.0.0
synopsis:            Triangular norm
description:         Please see README.md
homepage:            https://github.com/PROTEINE-INSAIDERS/t-norms/#readme
license:             BSD3
license-file:        LICENSE
author:              Stanislav Chernichkin
maintainer:          schernichkin@gmail.com
copyright:           2016 Stanislav Chernichkin
category:            Logic
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TNorms
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite t-norms-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ieee754
                     , QuickCheck
                     , t-norms
                     , test-framework-quickcheck2
                     , test-framework
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -main-is Spec.main
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/PROTEINE-INSAIDERS/t-norms.git
